--- a/eu-atollgroup-mifid-ejbs/pom.xml
+++ b/eu-atollgroup-mifid-ejbs/pom.xml
@@ -1,10 +1,11 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
-   <groupId>eu.atollgroup.mifid.ear</groupId>
-   <artifactId>eu.atollgroup.mifid.ear</artifactId>
-   <name>eu.atollgroup.mifid.ear</name>
-   <packaging>ear</packaging>
+   <groupId>eu.atollgroup.mifid.ejbs</groupId>
+   <artifactId>eu.atollgroup.mifid.ejbs</artifactId>
+   <name>eu-atollgroup-mifid-ejbs</name>
+   <packaging>ejb</packaging>
    <version>1.0-SNAPSHOT</version>
+
    <parent>
       <groupId>eu.atollgroup.mifid</groupId>
       <artifactId>eu.atollgroup.mifid</artifactId>
@@ -12,25 +13,20 @@
    </parent>
    <dependencies>
       <dependency>
-         <groupId>root.project.servlets</groupId>
-         <artifactId>servlet</artifactId>
-         <type>war</type>
-      </dependency>
-      <dependency>
          <groupId>root.project.projects</groupId>
          <artifactId>logging</artifactId>
       </dependency>
-   </dependencies>
+  </dependencies>
    <build>
       <plugins>
          <plugin>
-            <artifactId>maven-ear-plugin</artifactId>
+            <artifactId>maven-ejb-plugin</artifactId>
             <configuration>
                <archive>
                   <manifest>
                      <addClasspath>true</addClasspath>
                   </manifest>
-               </archive>
+               </archive> 
             </configuration>
          </plugin>
       </plugins>
