--- a/eu-atollgroup-mifid-web/pom.xml
+++ b/eu-atollgroup-mifid-web/pom.xml
@@ -1,10 +1,10 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
-   <groupId>root.project</groupId>
-   <artifactId>servlets</artifactId>
+   <groupId>eu.atollgroup.mifid.web</groupId>
+   <artifactId>eu.atollgroup.mifid.web</artifactId>
+   <name>eu-atollgroup-mifid-web</name>
    <packaging>pom</packaging>
-   <name>servlets</name>
-   <version>1.0</version>
+   <version>1.0-SNAPSHOT</version>
    <parent>
       <groupId>eu.atollgroup.mifid</groupId>
       <artifactId>eu.atollgroup.mifid</artifactId>
