--- a/eu-atollgroup-mifid-ear/pom.xml
+++ b/eu-atollgroup-mifid-ear/pom.xml
@@ -12,13 +12,16 @@
    </parent>
    <dependencies>
       <dependency>
-         <groupId>root.project.servlets</groupId>
-         <artifactId>servlet</artifactId>
-         <type>war</type>
+         <groupId>eu.atollgroup.mifid.ejbs</groupId>
+         <artifactId>eu.atollgroup.mifid.ejbs</artifactId>
+         <version>1.0-SNAPSHOT</version>
+         <type>ejb</type>
       </dependency>
       <dependency>
-         <groupId>root.project.projects</groupId>
-         <artifactId>logging</artifactId>
+         <groupId>eu.atollgroup.mifid.web</groupId>
+         <artifactId>eu.atollgroup.mifid.web</artifactId>
+         <version>1.0-SNAPSHOT</version>
+         <type>war</type>
       </dependency>
    </dependencies>
    <build>
