--- a/eu-atollgroup-mifid-ejbs/pom.xml
+++ b/eu-atollgroup-mifid-ejbs/pom.xml
@@ -1,34 +1,45 @@
 <project>
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>eu.atollgroup.mifid.ejbs</groupId>
-   <artifactId>eu.atollgroup.mifid.ejbs</artifactId>
-   <name>eu-atollgroup-mifid-ejbs</name>
-   <packaging>ejb</packaging>
-   <version>1.0-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>eu.atollgroup.mifid.ejbs</groupId>
+    <artifactId>eu.atollgroup.mifid.ejbs</artifactId>
+    <name>eu-atollgroup-mifid-ejbs</name>
+    <packaging>ejb</packaging>
+    <version>1.0-SNAPSHOT</version>
 
-   <parent>
-      <groupId>eu.atollgroup.mifid</groupId>
-      <artifactId>eu.atollgroup.mifid</artifactId>
-      <version>1.0-SNAPSHOT</version>
-   </parent>
-   <dependencies>
-      <dependency>
-         <groupId>root.project.projects</groupId>
-         <artifactId>logging</artifactId>
-      </dependency>
-  </dependencies>
-   <build>
-      <plugins>
-         <plugin>
-            <artifactId>maven-ejb-plugin</artifactId>
-            <configuration>
-               <archive>
-                  <manifest>
-                     <addClasspath>true</addClasspath>
-                  </manifest>
-               </archive> 
-            </configuration>
-         </plugin>
-      </plugins>
-   </build>
+    <parent>
+        <groupId>eu.atollgroup.mifid</groupId>
+        <artifactId>eu.atollgroup.mifid</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>5.1.0.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate.common</groupId>
+                <artifactId>hibernate-commons-annotations</artifactId>
+                <version>5.0.1.Final</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-ejb-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <ejbVersion>3.0</ejbVersion>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
