--- a/eu-atollgroup-mifid-ear/pom.xml
+++ b/eu-atollgroup-mifid-ear/pom.xml
@@ -12,8 +12,8 @@
    </parent>
    <dependencies>
       <dependency>
-         <groupId>eu.atollgroup.mifid.ejbs</groupId>
-         <artifactId>eu.atollgroup.mifid.ejbs</artifactId>
+         <groupId>eu.atollgroup.mifid.ejb</groupId>
+         <artifactId>eu.atollgroup.mifid.ejb</artifactId>
          <version>1.0-SNAPSHOT</version>
          <type>ejb</type>
       </dependency>
