--- a/eu-atollgroup-mifid-web/pom.xml
+++ b/eu-atollgroup-mifid-web/pom.xml
@@ -10,14 +10,17 @@
         <artifactId>eu.atollgroup.mifid</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.webjars</groupId>
-                <artifactId>angularjs</artifactId>
-                <version>1.5.0</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angularjs</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angular-ui-bootstrap</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+    </dependencies>
 </project>
 
