--- a/eu-atollgroup-mifid-web/src/main/webapp/WEB-INF/web.xml
+++ b/eu-atollgroup-mifid-web/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,17 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="mifid-web" version="3.0">
+    <security-constraint>
+    <web-resource-collection>
+        <web-resource-name>Mifid frontend</web-resource-name>
+        <url-pattern>/mifid/*</url-pattern>
+        <http-method>GET</http-method>
+        <http-method>POST</http-method>
+        <http-method>HEAD</http-method>
+        <http-method>PUT</http-method>
+        <http-method>OPTIONS</http-method>
+        <http-method>TRACE</http-method>
+        <http-method>DELETE</http-method>
+    </web-resource-collection>
+    </security-constraint>
 </web-app>
