--- a/eu-atollgroup-mifid-ear/pom.xml
+++ b/eu-atollgroup-mifid-ear/pom.xml
@@ -1,41 +1,42 @@
 <project>
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>eu.atollgroup.mifid.ear</groupId>
-   <artifactId>eu.atollgroup.mifid.ear</artifactId>
-   <name>eu-atollgroup-mifid-ear</name>
-   <packaging>ear</packaging>
-   <version>1.0-SNAPSHOT</version>
-   <parent>
-      <groupId>eu.atollgroup.mifid</groupId>
-      <artifactId>eu.atollgroup.mifid</artifactId>
-      <version>1.0-SNAPSHOT</version>
-   </parent>
-   <dependencies>
-      <dependency>
-         <groupId>eu.atollgroup.mifid.ejb</groupId>
-         <artifactId>eu.atollgroup.mifid.ejb</artifactId>
-         <version>1.0-SNAPSHOT</version>
-         <type>ejb</type>
-      </dependency>
-      <dependency>
-         <groupId>eu.atollgroup.mifid.web</groupId>
-         <artifactId>eu.atollgroup.mifid.web</artifactId>
-         <version>1.0-SNAPSHOT</version>
-         <type>war</type>
-      </dependency>
-   </dependencies>
-   <build>
-      <plugins>
-         <plugin>
-            <artifactId>maven-ear-plugin</artifactId>
-            <configuration>
-               <archive>
-                  <manifest>
-                     <addClasspath>true</addClasspath>
-                  </manifest>
-               </archive>
-            </configuration>
-         </plugin>
-      </plugins>
-   </build>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>eu-atollgroup-mifid-ear</groupId>
+    <artifactId>eu-atollgroup-mifid-ear</artifactId>
+    <name>eu-atollgroup-mifid-ear</name>
+    <packaging>ear</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>eu.atollgroup.mifid</groupId>
+        <artifactId>eu.atollgroup.mifid</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <dependencies>
+        <dependency>
+            <groupId>eu-atollgroup-mifid-ejb</groupId>
+            <artifactId>eu-atollgroup-mifid-ejb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>ejb</type>
+        </dependency>
+        <dependency>
+            <groupId>eu.atollgroup.mifid.web</groupId>
+            <artifactId>eu.atollgroup.mifid.web</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-ear-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                    <finalName>eu-atollgroup-mifid-ear</finalName>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
