--- a/eu-atollgroup-mifid-ejb/pom.xml
+++ b/eu-atollgroup-mifid-ejb/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>eu.atollgroup.mifid.ejb</groupId>
-    <artifactId>eu.atollgroup.mifid.ejb</artifactId>
+    <groupId>eu-atollgroup-mifid-ejb</groupId>
+    <artifactId>eu-atollgroup-mifid-ejb</artifactId>
     <name>eu-atollgroup-mifid-ejb</name>
     <packaging>ejb</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -35,9 +35,9 @@
             <version>1.19</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>eu.atollgroup.mifid.common</groupId>
+            <artifactId>eu.atollgroup.mifid.common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -47,12 +47,13 @@
                 <artifactId>maven-ejb-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <ejbVersion>3.0</ejbVersion>
+                    <ejbVersion>3.1</ejbVersion>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
+                    <jarName>eu-atollgroup-mifid-ejb</jarName>
                 </configuration>
             </plugin>
             <plugin>
