--- a/eu-atollgroup-mifid-web/pom.xml
+++ b/eu-atollgroup-mifid-web/pom.xml
@@ -21,6 +21,32 @@
             <artifactId>angular-ui-bootstrap</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <!-- RESTful web service: Jersey -->
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-core</artifactId>
+            <version>1.19</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>1.19</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-servlet</artifactId>
+            <version>1.19</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>1.19</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.atollgroup.mifid.common</groupId>
+            <artifactId>eu.atollgroup.mifid.common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
 
