--- a/eu-atollgroup-mifid-web/src/main/webapp/WEB-INF/web.xml
+++ b/eu-atollgroup-mifid-web/src/main/webapp/WEB-INF/web.xml
@@ -3,17 +3,28 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="mifid-web" version="3.0">
-    <security-constraint>
-    <web-resource-collection>
-        <web-resource-name>Mifid frontend</web-resource-name>
-        <url-pattern>/mifid/*</url-pattern>
-        <http-method>GET</http-method>
-        <http-method>POST</http-method>
-        <http-method>HEAD</http-method>
-        <http-method>PUT</http-method>
-        <http-method>OPTIONS</http-method>
-        <http-method>TRACE</http-method>
-        <http-method>DELETE</http-method>
-    </web-resource-collection>
-    </security-constraint>
+    <display-name>MiFID Restful Web Application</display-name>
+    <servlet>
+        <servlet-name>jersey-serlvet</servlet-name>
+
+        <servlet-class>
+            com.sun.jersey.spi.container.servlet.ServletContainer
+        </servlet-class>
+
+        <init-param>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>restservice</param-value>
+        </init-param>
+
+        <init-param>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-value>true</param-value>
+        </init-param>
+
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>jersey-serlvet</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
 </web-app>
