--- a/eu-atollgroup-mifid-common/pom.xml
+++ b/eu-atollgroup-mifid-common/pom.xml
@@ -12,5 +12,7 @@
     <groupId>eu.atollgroup.mifid.common</groupId>
     <artifactId>eu.atollgroup.mifid.common</artifactId>
     <name>eu-atollgroup-mifid-common</name>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
 
 </project>
