--- a/eu-atollgroup-mifid-common/pom.xml
+++ b/eu-atollgroup-mifid-common/pom.xml
@@ -12,6 +12,13 @@
     <groupId>eu.atollgroup.mifid.common</groupId>
     <artifactId>eu.atollgroup.mifid.common</artifactId>
     <name>eu-atollgroup-mifid-common</name>
+    <dependencies>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+    </dependencies>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
