--- a/pom.xml
+++ b/pom.xml
@@ -89,5 +89,10 @@
             <version>${version.dependency.javaee}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
     </dependencies>
 </project>
