--- a/eu-atollgroup-mifid-web/src/main/webapp/WEB-INF/web.xml
+++ b/eu-atollgroup-mifid-web/src/main/webapp/WEB-INF/web.xml
@@ -27,4 +27,17 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
         <servlet-name>jersey-serlvet</servlet-name>
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>restricted methods</web-resource-name>
+            <url-pattern>/rest/*</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+            <http-method>HEAD</http-method>
+            <http-method>PUT</http-method>
+            <http-method>OPTIONS</http-method>
+            <http-method>TRACE</http-method>
+            <http-method>DELETE</http-method>
+        </web-resource-collection>
+    </security-constraint>
 </web-app>
