--- a/eu-atollgroup-mifid-ejb/pom.xml
+++ b/eu-atollgroup-mifid-ejb/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>eu.atollgroup.mifid.common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>eu.atollgroup.mifid.common</groupId>
+            <artifactId>eu.atollgroup.mifid.common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
